--- a/index.html
+++ b/index.html
@@ -2,26 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test</title>
+    <title>Emblem Generator Example</title>
 
     <script type="text/javascript" src="node_modules/raphael/raphael.min.js"></script>
-    <script type="text/javascript" src="src/emblem-generator.js"></script>
-    <script type="text/javascript" src="src/assets.js"></script>
+    <script type="text/javascript" src="build/emblem-generator.js"></script>
 </head>
 <body>
-    <h2>Test</h2>
+    <h2>Emblem Generator Example</h2>
     <div id="emblem-div"></div>
 
     <script>
       emblemGenerator.init('emblem-div', 256, 'transparent');
 
       emblemGenerator.drawEmblemObj({
-        "background_id":3,
-        "foreground_id":103,
-        "flags":["FlipBackgroundHorizontal"],
+        "background_id":1,
+        "foreground_id":"star",
+        "flags":[],
         "background_color_id":348,
-        "foreground_primary_color_id":443,
-        "foreground_secondary_color_id":473
+        "foreground_primary_color_id":52,
+        "foreground_secondary_color_id":113
       });
     </script>
 </body>
