--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Emblem Generator Example</title>
-
-    <script type="text/javascript" src="node_modules/raphael/raphael.min.js"></script>
-    <script type="text/javascript" src="build/emblem-generator.js"></script>
+    <script type="text/javascript" src="dist/main.js"></script>
 </head>
 <body>
     <h2>Emblem Generator Example</h2>
