--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Emblem Generator Example</title>
-    <script type="text/javascript" src="dist/main.js"></script>
+    <script type="text/javascript" src="build/main.js"></script>
 </head>
 <body>
     <h2>Emblem Generator Example</h2>
