:sparkles: make modulable

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="emblem-div"></div>
 
     <script>
-      emblemGenerator.init('emblem-div', 256, 'transparent');
+      emblemGenerator.init('emblem-div', 256);
 
       emblemGenerator.drawEmblemObj({
         "background_id":1,
