:zap: use file loader for default background

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         color_defs: colors
       };
 
-      emblemGenerator.init('emblem-div', 256, myAssets, 'transparent');
+      emblemGenerator.init('emblem-div', 256, myAssets);
 
       emblemGenerator.drawEmblemObj({
         "background_id":1,
