update for browser usage

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
           "foreground_secondary_color":'hsl(45,100,50)'
       };
 
+      var emblemGenerator = new EmblemGenerator();
+
       emblemGenerator.init('emblem-div', 256, myAssets);
 
       emblemGenerator.drawEmblemObj(emblemData);
